# text2speech

./: .dockerignore  .eslintrc.cjs  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  eslint.config.cjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
docker/: Dockerfile.gateway  Dockerfile.text-analysis  Dockerfile.tts-adapter  Dockerfile.web  nginx.web.conf
docs/: backend_architecture_ua.md  development_ua.md  docs_index_ua.md  ffmpeg_pipeline_ua.md  frontend_architecture_ua.md  initial_plan_ua.md  piper_integration_ua.md  project_structure_ua.md  (+2 more)
src/services/text-analysis/: pyproject.toml
src/services/text-analysis/app/: __init__.py  main.py
src/services/text-analysis/app/domain/: __init__.py  mapper.py  normalizer.py  planner.py  segmenter.py  service.py  signal_extractor.py
src/services/text-analysis/app/http/: __init__.py  contracts.py  errors.py
src/services/text-analysis/app/models/: __init__.py  segment.py
src/services/text-analysis/tests/: test_analysis_service.py  test_health.py  test_mapper.py  test_normalizer.py  test_planner.py  test_segment_model.py  test_segmenter.py  test_signal_extractor.py
src/services/tts-adapter/: pyproject.toml
src/services/tts-adapter/app/: main.py
src/services/tts-adapter/app/http/: contracts.py
src/services/tts-adapter/app/models/: __init__.py  segment.py
src/services/tts-adapter/app/providers/: __init__.py  base.py  piper.py
src/services/tts-adapter/tests/: test_piper_provider.py  test_segment_model.py
(+70 files in other folders)
