[project]
name = "text_analysis"
version = "0.1.0"
description = "Text analysis service for emotional TTS (normalizer, parser, emotion mapping, prosody planning)"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "isort",
  "ruff"
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100

